--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # REQUIRED CHANGES
 # Edit next line to provide your own name.
-title: Rylee Au | Professional Portfolio
+title: "Rylee Au | Professional Portfolio"
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://ryleeau.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
@@ -8,7 +8,7 @@ baseurl: ""
 
 # OPTIONAL CHANGES
 ## Specify the theme using any of the css files in css/techfolio-theme
-techfolio-theme: lime.css
+techfolio-theme: default.css
 ## Specify the formatting for triple backquote code sections.
 rouge-theme: github.css
 
